# cat-light

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  README.zh-CN.md
.github/workflows/: build.yml
docs/: comparison.md  hook-contract.md  install-windows.md  platform-roadmap.md  references.md  storage.md
docs/release-notes/: v0.1.0.md  v0.2.0.md
scripts/: build-msvc.ps1  build-msys2.ps1  package-windows.ps1  test-fixtures.ps1
src/: agent.cpp  agent.hpp  agent_scan.cpp  agent_scan.hpp  app.cpp  app.hpp  float_win32.cpp  history_store.cpp  history_store.hpp  history_store_jsonl.cpp  history_store_sqlite.cpp  hooks.cpp  hooks.hpp  http_client.cpp  http_client.hpp  json.cpp  json.hpp  main.cpp  provider_claude.cpp  provider_codex.cpp  render.cpp  render.hpp  server.cpp  server.hpp  sync.cpp  sync.hpp  tray_win32.cpp  util.cpp  util.hpp
tests/fixtures/claude/projects/project-one/: claude-fixture.jsonl
tests/fixtures/claude/projects/project-three/: claude-schema-drift.jsonl
tests/fixtures/claude/projects/project-two/: claude-error-fixture.jsonl
tests/fixtures/codex/sessions/2026/06/04/: rollout-codex-fixture.jsonl
tests/fixtures/codex/sessions/2026/06/05/: rollout-codex-approval-failure.jsonl  rollout-codex-patch-fixture.jsonl
tests/fixtures/codex/sessions/2026/06/06/: rollout-codex-schema-drift.jsonl  rollout-shared-session.jsonl
tests/fixtures/codex/sessions/2026/06/07/: rollout-shared-session.jsonl
